feat: add stable telemetry event server ids